@@ -24,6 +24,7 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
+import javax.annotation.Nullable;
 
 import cascading.stats.CascadingStats;
 import cascading.stats.FlowSliceStats;
@@ -110,9 +111,10 @@ public class TezSliceStats extends FlowSliceStats<TezNodeStats.Kind> implements 
     return parentStatus;
     }
 
-  protected void setStatus( CascadingStats.Status status )
+  protected void setStatus( @Nullable CascadingStats.Status status )
     {
-    this.status = status;
+    if( status != null )
+      this.status = status;
     }
 
   @Override
@@ -169,7 +171,7 @@ public class TezSliceStats extends FlowSliceStats<TezNodeStats.Kind> implements 
     return attempts;
     }
 
-  public void setCounters( Map<String, Map<String, Long>> counters )
+  public void setCounters( @Nullable Map<String, Map<String, Long>> counters )
     {
     if( counters != null )
       this.counters = counters;
